# ekki_vulkan

./: .gitignore  CMakeLists.txt  README.md  animation.cpp  animation.hpp  compile.sh  constants.hpp  engine.cpp  engine.hpp  gui.cpp  gui.hpp  main.cpp  meshes.cpp  meshes.hpp  scene.cpp  scene.hpp  triangle.cpp  triangle.hpp  types.cpp
design/: animation.md  timeline.md  vkbe_design.md
shaders/: simple_shader.frag  simple_shader.vert
src/: animation.cpp  engine.cpp  gui.cpp  main.cpp  meshes.cpp  scene.cpp  timeline.cpp  triangle.cpp  types.cpp
src/gui/: gui.cpp  timeline.cpp
src/gui/include/: gui.hpp  timeline.hpp
src/include/: animation.hpp  engine.hpp  gui.hpp  meshes.hpp  scene.hpp  timeline.hpp  triangle.hpp  types.hpp
src/shaders/: simple_shader.frag.spv  simple_shader.vert.spv
src/vulkan-backend/: vkbe_config.cpp  vkbe_device.cpp  vkbe_model.cpp  vkbe_pipeline.cpp  vkbe_render_pass.cpp  vkbe_render_system.cpp  vkbe_renderer.cpp  vkbe_swap_chain.cpp  vkbe_window.cpp
src/vulkan-backend/include/: vkbe_device.hpp  vkbe_model.hpp  vkbe_render_system.hpp  vkbe_renderer.hpp  vkbe_swap_chain.hpp
src/vulkan-backend/legacy/: first_app.cpp  first_app.hpp  lve_renderer.cpp  lve_swap_chain.cpp  lve_swap_chain.hpp  lve_window.cpp
vulkan-backend/: DESIGN.md  lve_device.cpp  lve_device.hpp  lve_game_object.hpp  lve_model.cpp  lve_model.hpp  lve_pipeline.cpp  lve_pipeline.hpp  lve_renderer.hpp  lve_window.hpp  simple_render_system.cpp  simple_render_system.hpp  vkbe_config.cpp  vkbe_device.cpp  vkbe_model.cpp  vkbe_pipeline.cpp  vkbe_render_pass.cpp  vkbe_render_system.cpp  vkbe_renderer.cpp  vkbe_swap_chain.cpp  vkbe_window.cpp
vulkan-backend/custom/: notes.md  vkbe_config.hpp  vkbe_device.cpp  vkbe_device.hpp  vkbe_pipeline.cpp  vkbe_pipeline.hpp  vkbe_render_pass.cpp  vkbe_render_pass.hpp  vkbe_render_system.cpp  vkbe_render_system.hpp  vkbe_renderer.cpp  vkbe_renderer.hpp  vkbe_swap_chain.cpp  vkbe_swap_chain.hpp  vkbe_window.cpp  vkbe_window.hpp
vulkan-backend/include/: vkbe_config.hpp  vkbe_device.hpp  vkbe_model.hpp  vkbe_render_pass.hpp  vkbe_renderer.hpp  vkbe_swap_chain.hpp  vkbe_window.hpp
vulkan-backend/legacy/: lve_device.cpp  lve_device.hpp  lve_pipeline.cpp  lve_renderer.hpp  lve_window.hpp
